css/style.css
/* GENERAL STYLES & BACKGROUND */

body {
    background: #0c739f url('../img/bg.png') repeat-x top center;
    font-family: "Tahoma", sans-serif;
}

p {
    margin: 5px;
}

.container {
    width: 1000px;
    margin: 0 auto;
    border-bottom: 4px solid #000;
    background: #fff;
    box-shadow: -1px -5px 20px 5px rgba(0, 0, 0, .55);
}

/* HEADER */

header {
    display: flex;
    flex-flow: column wrap;
    height: 175px;
}

.logo,
.contacts,
.contacts > a,
.countries > a {
    color: #49adc0;
}

.logo,
.contacts {
    flex: 1;
    font-size: .8em;
}

.logo {
    display: flex;
    position: relative;
    flex-basis: 100%;
    justify-content: center;
    width: 350px;
    text-align: center;
    box-sizing: border-box;
}

.asia-holidays {
    position: absolute;
    left: 15px;
    margin: 10px 20px;
}

.motto {
    align-self: center;
    margin-top: 30px;
    padding-top: 20px;
}

.contacts {
    align-self: flex-end;
    width: 150px;
    padding: 10px 10px 0;
    line-height: 20px;
}

.countries {
    font-size: .6em;
    text-align: right;
}

.countries > a {
    display: inline-block;
    width: 51px;
    height: 55px;
    margin-bottom: 5px;
    margin-left: 5px;
    padding-top: 45px;
    background: url('../img/sprite.png') 4px 0 no-repeat;
    text-align: center;
    box-sizing: border-box;
}

.countries .nepal {
    background-position: -46px 0;
}

.countries .tibet {
    background-position: -98px 0;
}

.countries .bhutan {
    background-position: -149px 0;
}

.countries .sri-lanka {
    background-position: -201px 0;
}

.countries .maldives {
    background-position: -254px 0;
}

/* HERO AREA */

.hero {
    border-top: 1px solid #128aa7;
    border-bottom: 1px solid #128aa7;
}

.main-nav {
    position: relative;
    top: -2px;
    box-shadow: 0 2px 1px 0 #7b7b7b;
}

.main-nav ul {
    /*background-color: #323232;*/
    background: #323232 linear-gradient(#373737, #303030);
}

.main-nav > ul {
    display: flex;
    justify-content: space-around;
    height: 30px;
    border-top: 1px solid #b4b4b5;
    border-bottom: 1px solid #000;
}

.main-nav > ul > li {
    position: relative;
    width: 20%;
}

.main-nav > ul > li:first-child,
.main-nav > ul > li:last-child,
.main-nav > ul > li:nth-child(6) {
    text-align: center;
}

.main-nav a {
    display: inline-block;
    padding: 7px;
    color: #fff;
    font-size: .9em;
    text-decoration: none;
}

.include {
    height: 31px; /* prevent dropdown menu collapse on the ul border-bottom */
}

.include > ul {
    position: absolute;
    top: -1000px;
    transition: opacity .2s linear;
    opacity: 0;
}

.include li {
    width: 145px;
}

.include:hover > ul {
    top: 31px;
    opacity: 1;
}

.include > a::after {
    display: inline-block;
    width: 8px;
    height: 8px;
    margin: 3px 6px;
    transition: transform .2s linear;
    background: url('../img/sprite.png') -303px 0 no-repeat;
    content: '';
}

.include:hover > a::after {
    transform: rotate(-90deg);
}

/* MAIN */

.main {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
}

.info,
.news {
    flex: 1 0 15%;
    padding: 10px;
    background-color: #edeef0;
    color: #787878;
    font-size: .85em;
    line-height: 18px;
}

.main h2 {
    margin: 0 auto 10px;
    color: #424c43;
    font-size: 1.3em;
    letter-spacing: .1em;
    text-align: center;
    text-shadow: 1px 1px #000;
}

.info {
    border-right: 1px solid #a9a8a8;
}

.news {
    border-left: 1px solid #a9a8a8;
}

.center {
    flex: 2 0 50%;
}

/* FOOTER */

footer {
    margin: 10px auto 15px;
    color: #e6f9fd;
    font-size: .8em;
    text-align: center;
}

